# tdd-huffman

./: .copilot-instructions.md  .gitignore  Cargo.toml  Makefile  README.md  package-lock.json  package.json
.github/: .copilot-instructions.md
.github/workflows/: ci.yml
.husky/: pre-commit  pre-push
examples/: debug_tree_serialization.rs  test_refactored_compression.rs  test_refactored_decompress.rs
scripts/: e2e_test.sh
src/: bit_stream.rs  code_extraction.rs  compression.rs  constants.rs  decompression.rs  frequency_map.rs  input_bit_stream.rs  lib.rs  main.rs  node_selection.rs  output_bit_stream.rs  tree_construction.rs  tree_deserialization.rs  tree_serialization.rs
tests/: README.md  bit_stream_tests.rs  code_extraction_property_tests.rs  code_extraction_tests.proptest-regressions  code_extraction_tests.rs  frequency_map_tests.rs  input_bit_stream_tests.rs  integration.rs  node_selection_tests.rs  property.rs  tree_construction_property_tests.rs  tree_construction_tests.rs  unit.rs  unit_tests.rs
tests/integration/: huffman_compression_tests.rs  mod.rs  test_utils.rs
tests/property/: code_extraction_property_tests.rs  compression_decompression_round_trip_tests.rs  mod.rs  tree_construction_property_tests.rs  tree_serialization_property_tests.proptest-regressions  tree_serialization_property_tests.rs
tests/unit/: compression_tests.rs  decompression_tests.rs  frequency_map_tests.rs  mod.rs  node_selection_tests.rs  output_bit_stream_tests.rs  tree_deserialization_tests.rs  tree_serialization_tests.rs
