[package]
name = "tdd-huffman"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <andrea.laforgia@armakuni.com>"]
description = "A TDD implementation of Huffman Compression"
repository = "https://github.com/andlaf-ak/tdd-huffman"

[lib]
doctest = false

[[bin]]
name = "huffman"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
proptest = "1.0"
rstest = "0.18"
test-case = "3.2"

# Unit tests configuration
[[test]]
name = "code_extraction_tests"
path = "tests/unit/code_extraction_tests.rs"

[[test]]
name = "decompression_tests"
path = "tests/unit/decompression_tests.rs"

[[test]]
name = "frequency_map_tests"
path = "tests/unit/frequency_map_tests.rs"

[[test]]
name = "input_bit_stream_tests"
path = "tests/unit/input_bit_stream_tests.rs"

[[test]]
name = "node_selection_tests"
path = "tests/unit/node_selection_tests.rs"

[[test]]
name = "output_bit_stream_tests"
path = "tests/unit/output_bit_stream_tests.rs"

[[test]]
name = "tree_construction_tests"
path = "tests/unit/tree_construction_tests.rs"

[[test]]
name = "tree_serialization_tests"
path = "tests/unit/tree_serialization_tests.rs"

[[test]]
name = "tree_deserialization_tests"
path = "tests/unit/tree_deserialization_tests.rs"

# Integration tests configuration
[[test]]
name = "huffman_compression_tests"
path = "tests/integration/huffman_compression_tests.rs"

# Property-based tests configuration
[[test]]
name = "code_extraction_property_tests"
path = "tests/property/code_extraction_property_tests.rs"

[[test]]
name = "compression_decompression_round_trip_tests"
path = "tests/property/compression_decompression_round_trip_tests.rs"

[[test]]
name = "tree_construction_property_tests"
path = "tests/property/tree_construction_property_tests.rs"

[[test]]
name = "tree_serialization_property_tests"
path = "tests/property/tree_serialization_property_tests.rs"
