[package]
name = "tdd-huffman"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <andrea.laforgia@armakuni.com>"]
description = "A TDD implementation of Huffman Compression"
repository = "https://github.com/andlaf-ak/tdd-huffman"

[lib]
doctest = false

[[bin]]
name = "huffman"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
proptest = "1.0"
rstest = "0.18"
test-case = "3.2"
